docs/kubernetes/ressources/drupal-mysql/drupal-mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
  labels:
    app: drupal-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal-mysql
  template:
    metadata:
      labels:
        app: drupal-mysql
    spec:
      containers:
        - name: drupal-mysql
          image: mysql:5.7
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mypd
              subPath: dbdata
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: drupal-mysql-pvc
