docs/kubernetes/ressources/drupal-mysql/all.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - name: drupal
          image: drupal:8.6
          volumeMounts:
            - mountPath: /var/www/html/modules
              name: mypd
              subPath: modules
            - mountPath: /var/www/html/profiles
              name: mypd
              subPath: profiles
            - mountPath: /var/www/html/sites
              name: mypd
              subPath: sites
            - mountPath: /var/www/html/themes
              name: mypd
              subPath: themes
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: drupal-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
  labels:
    app: drupal-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal-mysql
  template:
    metadata:
      labels:
        app: drupal-mysql
    spec:
      containers:
        - name: drupal-mysql
          image: mysql:5.7
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mypd
              subPath: dbdata
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: drupal-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
spec:
  selector:
    app: drupal
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30095
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-mysql-service
spec:
  selector:
    app: drupal
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
