docs/kubernetes/ressources/drupal-mysql/drupal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
spec:
  selector:
    app: drupal
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
