docs/kubernetes/ressources/drupal-mysql/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-clust-service
spec:
  selector:
    app: drupal
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-ing
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: drupal.local
      http:
        paths:
          - path: /
            backend:
              serviceName: drupal-clust-service
              servicePort: 80
